# sage

./: .gitattributes  .gitignore  AES.lir.sg  CHANGELOG.md  CORE.md  Cargo.toml  LICENSE  README.md  a.out  add.lir.sg  allocate.lir.sg  build-docs.dunesh  build-docs.sh  build.rs  calculator.lir.sg  error-test.sg  ffi.h  gmon.out  gprof.out  hmm.lir.sg  new-syntax.lir.sg  prof_output  result.txt  scheme.lir.sg  templates.lir.sg  test  test.c  test.lir.sg  test.py  test.rs  test.sg  tree.lir.sg
.github/workflows/: cargo-test.yml  release.yml
Launch_tests_2024-08-29_17.26.59_BC0B33B6.trace/: form.template
Launch_tests_2024-08-29_17.26.59_BC0B33B6.trace/Trace1.run/: RunIssues.storedata
Launch_tests_2024-08-29_17.30.59_6261F716.trace/: form.template  open.creq
Launch_tests_2024-08-29_17.30.59_6261F716.trace/Trace1.run/: RunIssues.storedata
Launch_tests_2024-08-29_17.32.20_474BB294.trace/: form.template
Launch_tests_2024-08-29_17.32.20_474BB294.trace/Trace1.run/: RunIssues.storedata
Launch_tests_2024-08-31_11.49.20_61E9D9AD.trace/: form.template
Launch_tests_2024-08-31_11.49.20_61E9D9AD.trace/Trace1.run/: RunIssues.storedata
Launch_tests_2024-08-31_12.04.06_E314558C.trace/: form.template
Launch_tests_2024-08-31_12.04.06_E314558C.trace/Trace1.run/: RunIssues.storedata
Launch_tests_2024-08-31_13.17.16_528348CD.trace/: form.template
Launch_tests_2024-08-31_13.17.16_528348CD.trace/Trace1.run/: RunIssues.storedata
Launch_tests_2024-08-31_13.18.50_038D7ADB.trace/: form.template
Launch_tests_2024-08-31_13.18.50_038D7ADB.trace/Trace1.run/: RunIssues.storedata
Launch_tests_2024-08-31_20.10.22_22950809.trace/: form.template
Launch_tests_2024-08-31_20.10.22_22950809.trace/Trace1.run/: RunIssues.storedata
assets/: add.txt  anatomy.txt  asm.md  bitwise-nand.txt  compiled.md  dec.txt  deref.txt  divide.txt  inc.txt  index.txt  is-non-negative.txt  memory_layout.txt  move.txt  multiply.txt  refer.txt  remainder.txt  restore.txt  save.txt  set.txt  subtract.txt  swap.txt  where.txt
benches/: frontend.rs
docs/: all.html  constant.LOGO_WITH_COLOR.html  constant.NULL.html  constant.TAGLINE.html  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
docs/acid/: constant.LOGO.html  constant.LOGO_WITH_COLOR.html  constant.NULL.html  constant.TAGLINE.html  index.html
docs/asm/: all.html  enum.Error.html  index.html  sidebar-items.js  trait.AssemblyProgram.html  trait.CompilerTarget.html
docs/lir/: enum.ConstExpr.html  index.html  struct.Env.html  trait.Compile.html  trait.GetSize.html  trait.GetType.html  trait.Simplify.html  trait.TypeCheck.html
docs/lsd/: all.html  enum.Error.html  enum.SourceType.html  enum.TargetType.html  fn.compile.html  fn.compile_source_to_asm.html  fn.compile_source_to_vm.html  fn.main.html  fn.read_file.html  fn.write_file.html  index.html  sidebar-items.js  struct.Args.html
docs/parse/: fn.parse_asm.html  fn.parse_lir.html  fn.parse_vm.html  index.html  sidebar-items.js
docs/sage/: all.html  constant.LOGO.html  constant.LOGO_WITH_COLOR.html  constant.NULL.html  constant.TAGLINE.html  index.html  sidebar-items.js
docs/targets/: sidebar-items.js
docs/tests/: all.html  fn.main.html  index.html
docs/vm/: enum.CoreOp.html  fn.as_float.html  fn.as_int.html  index.html  struct.CoreProgram.html  struct.StandardDevice.html  struct.StandardInterpreter.html  struct.TestingDevice.html  trait.VirtualMachineProgram.html
example/: Build.toml  aes.sg  code-gen.sg  compile  ffi.h  hello_world.sg  input.txt  main.sg  out
example/math/: matrix.sg  trig.sg
example/src/: main.sg  shell.sg
examples/: README.md
examples/acid-web/: Cargo.toml  index.html
examples/asm/: bitwise-test.asm.lsd  bitwise-test.asm.sg  cat.asm.sg  comparison.asm.sg  fact.asm.lsd  fact.asm.sg  float.asm.sg  globals.asm.sg  globals2.asm.sg  string.asm.sg  vector.asm.sg
examples/demo/: Cargo.toml  build.sh  index.html
examples/frontend/: AES.sg  a.sg  allocator.sg  array.sg  b.sg  calculator.sg  chacha20.sg  chess.sg  const-generics-array.sg  const-generics-enum.sg  const-generics-member.sg  diff.sg  ffi.sg  hashmap.sg  hex-editor.sg  improved_hashmap.sg  interactive-calculator.sg  list.sg  mandelbrot.sg  map.sg  matrix.sg  matrix_point.sg  memcpy.sg  meta-addition.sg  mod_sqrt.sg  option.sg  pattern.sg  reflection.sg  rng.sg  s-expr.sg  sequence.sg  sequence2.sg  static.sg  string.sg  sudoku.sg  templates.sg  test-math-library.sg  test_modules1.sg  test_modules2.sg  test_std1.sg  (+11 more)
examples/lir/: AES.lir.lsd  AES.lir.sg  README.md  assign_ops.lir.sg  bitops.lir.sg  cat.lir.sg  collatz.lir.lsd  collatz.lir.sg  comparison.lir.sg  euclid.lir.lsd  euclid.lir.sg  fact.lir.sg  function.lir.sg  if-let.lir.sg  inline-assembly.lir.sg  label-test.lir.lsd  label-test.lir.sg  lambda-sim.lir.lsd  lambda-sim.lir.sg  linked-list-algebraic-types.lir.sg  match-test.lir.sg  match.lir.sg  new.lir.sg  option.lir.sg  power.lir.sg  precedence.lir.sg  put.lir.sg  quicksort.lir.lsd  quicksort.lir.sg  recursive-types.lir.sg  square.lir.sg  thermostat.lir.sg  type.lir.sg  union-buster.lir.lsd  units.sg
examples/output/: AES.txt  allocator.txt  calculator.txt  comparison.asm.txt  globals.asm.txt  globals2.asm.txt  hashmap.txt  if-let.lir.txt  label-test.lir.txt  linked-list-algebraic-types.lir.txt  match-test.lir.txt  meta-addition.txt  precedence.lir.txt  sequence.txt  sequence2.txt  templates.txt  trees.txt  units.lir.txt
examples/sage-os/: presentation.sg  shell.sg
examples/test-output/: AES.lir.txt  AES.txt  README.md  array.txt  bitops.lir.txt  bitwise-test.asm.txt  chacha20.txt  collatz.lir.txt  const-generics-array.txt  diff.txt  map.txt  (+42 more)
examples/web/: Cargo.toml  LICENSE_MIT  README.md  index.html
examples/web/src/: device.rs  interpreter.rs  lib.rs
origen/: parse.rs
src/: README.md  asm_parser.lalrpop  build_system.rs  cli.rs  io.rs  lib.rs  lir_parser.lalrpop  main.rs  parse.rs  tests.rs  vm_parser.lalrpop
tests/: README.md  add.rs  alphabet.rs  asm.rs  c_target.rs  cmp.rs  examples.rs  ir.rs  lir.rs  stack.rs  str.rs  vm.rs
(+1059 files in other folders)
