[package]
name = "sage"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
version = "0.1.0-alpha"
edition = "2021"
license = "GPL-2.0-or-later"
description = "A portable programming language with a compact backend"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sage"
path = "src/cli.rs"

[dependencies]
maplit = "1.0.2"
lazy_static = "1.4.0"
lalrpop-util = "0.19.8"
lalrpop = { version = "=0.19.9", features = [ "lexer" ] }
clap = { version ="4.2.4", features = ["derive", "cargo"] }
no-comment = "0.0.3"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = { version = "=0.19.9", features = [ "lexer" ] }