[package]
name = "sage"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com> (https://adam-mcdaniel.net)"]
version = "0.0.1-alpha"
edition = "2021"
license = "GPL-2.0-or-later"
description = "A portable programming language with a compact backend"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sage"
path = "src/cli.rs"

[dependencies]
regex = { version = "1.8.1", features = ["unicode"] }
maplit = "1.0.2"
lazy_static = "1.4.0"
lalrpop-util = "0.19.8"
lalrpop = { version = "=0.19.9", features = [ "lexer" ] }
clap = { version ="4.2.4", features = ["derive", "cargo"] }
no-comment = "0.0.3"
pest = "2.6.0"
pest_derive = "2.6.0"
snailquote = "0.3.1"
codespan-reporting = "0.11.1"
log = "0.4.20"
env_logger = "0.10.0"

[dev-dependencies]
criterion = "0.5"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
regex = { version = "1.8.1", features = ["unicode"] }
lalrpop = { version = "=0.19.9", features = [ "lexer"] }

[[bench]]
name = "frontend"
harness = false
